codepkg/objects/Page_Section__mdt.object
<CustomObject>
    <fields>
        <fullName>Hide_Field_API_Name_2__c</fullName>
        <label>Hide Field API Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hide_Field_API_Name__c</fullName>
        <label>Hide Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hide_Field_Operator_2__c</fullName>
        <label>Hide Field Operator 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equal</fullName>
                    <default>true</default>
                    <label>Equal</label>
                </value>
                <value>
                    <fullName>Not Equal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hide_Field_Operator__c</fullName>
        <label>Hide Field Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equal</fullName>
                    <default>true</default>
                    <label>Equal</label>
                </value>
                <value>
                    <fullName>Not Equal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hide_Field_Value_2__c</fullName>
        <label>Hide Field Value 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hide_Field_Value__c</fullName>
        <label>Hide Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Layout__c</fullName>
        <label>Page Layout</label>
        <referenceTo>Page_Layout__mdt</referenceTo>
        <relationshipLabel>Page Sections</relationshipLabel>
        <relationshipName>Page_Sections</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Page Section</label>
    <listViews>
        <fullName>All_Page_Section</fullName>
        <columns>Sequence__c</columns>
        <columns>MasterLabel</columns>
        <columns>Page_Layout__c</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>Hide_Field_API_Name__c</columns>
        <columns>Hide_Field_API_Name_2__c</columns>
        <columns>Hide_Field_Value__c</columns>
        <columns>Hide_Field_Value_2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Page Section</label>
    </listViews>
    <pluralLabel>Page Sections</pluralLabel>
</CustomObject>